src/snapshots/palinter__load_folder_structure__tests__ignore_folders.snap
---
source: src/load_folder_structure.rs
expression: folder
---
Ok(
    Folder {
        name: "ignore_folder",
        childs: [
            FileChild(
                File {
                    basename: "not_ignore",
                    name_with_ext: "not_ignore.ts",
                    content: None,
                    extension: Some(
                        "ts",
                    ),
                    relative_path: "./not_ignore.ts",
                },
            ),
        ],
    },
)
