src/snapshots/palinter__load_folder_structure__tests__ignore_unconfigured_folder.snap
---
source: src/load_folder_structure.rs
expression: folder
---
Ok(
    Folder {
        name: "analyze_file_contents",
        childs: [
            FileChild(
                File {
                    basename: "test",
                    name_with_ext: "test.md",
                    content: None,
                    extension: Some(
                        "md",
                    ),
                },
            ),
        ],
    },
)
